# pkg/infrastrucuture/http/entities/request.go
@@ -4,3 +4,8 @@ type CreateUser struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
+
+type LoginUser struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
