# pkg/infrastrucuture/http/entities/response.go
@@ -3,3 +3,7 @@ package entities
 type ErrorResponse struct {
 	Error string `json:"error"`
 }
+
+type LoginResponse struct {
+	Token string `json:"token"`
+}
