# pkg/infrastrucuture/http/handlers/user_handler.go
@@ -9,18 +9,21 @@ import (
 
 type UserHandler struct {
 	register *usecase.RegisterUserUseCase
+	login    *usecase.LoginUseCase
 }
 
 func NewUserHandler(
 	register *usecase.RegisterUserUseCase,
+	login *usecase.LoginUseCase,
 ) *UserHandler {
 	return &UserHandler{
 		register,
+		login,
 	}
 }
 
 // Register
-// @Tags Table
+// @Tags User
 // @Summary Create a new user
 // @Accept json
 // @Produce json
@@ -43,4 +46,30 @@ func (h *UserHandler) Register(ctx *gin.Context) {
 	}
 
 	ctx.JSON(http.StatusCreated, created)
+}
+
+// Login
+// @Tags User
+// @Summary User login
+// @Accept json
+// @Produce json
+// @Param request body entities.LoginUser true "query params"
+// @Success 201 {object} entities.LoginResponse
+// @Failure 400 {object} entities.ErrorResponse
+// @Failure 500 {object} entities.ErrorResponse
+// @Router /login [post]
+func (h *UserHandler) Login(ctx *gin.Context) {
+	var create entities.LoginUser
+	if err := ctx.BindJSON(&create); err != nil {
+		ctx.AbortWithStatusJSON(http.StatusBadRequest, entities.ErrorResponse{Error: err.Error()})
+		return
+	}
+
+	token, err := h.login.Login(create.Username, create.Password)
+	if err != nil {
+		ctx.AbortWithStatusJSON(http.StatusBadRequest, entities.ErrorResponse{Error: err.Error()})
+		return
+	}
+
+	ctx.JSON(http.StatusCreated, entities.LoginResponse{Token: *token})
 }
