# pkg/infrastrucuture/http/routes/user_routes.go
@@ -17,4 +17,5 @@ func NewRoutes(handler *handlers.UserHandler) *UserRoutes {
 
 func (r *UserRoutes) RegisterUserRoutes(public *gin.RouterGroup) {
 	public.POST("/register", r.handler.Register)
+	public.POST("/login", r.handler.Login)
 }
